--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,19 @@
 ---
-
+import { Picture } from 'astro:assets'
+import jccLogo from '../assets/images/jcc-logo.png'
 ---
 
-<html lang="en">
+<html lang="en" class="h-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Judo Central Coast</title>
 	</head>
-	<body class="bg-black">
-		<h1 class="text-4xl text-white">Astro</h1>
+	<body class="bg-black text-white flex flex-col gap-4 justify-center items-center h-full">
+        <Picture class="mx-auto mb-4" src={jccLogo} formats={['avif', 'webp', 'png']} alt="Judo Central Coast Logo" />
+        <h1 class="text-4xl">Coming Soon</h1>
+        <p>For information please contact Shane Alvisio on 0410 044 205 or Paul Sheean on 0422 058 087</p>
 	</body>
 </html>
