--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import jccLogo from '../assets/images/jcc-logo.png'
 	</head>
 	<body class="bg-black text-white flex flex-col gap-4 justify-center items-center h-full">
         <Picture class="mx-auto mb-4" src={jccLogo} formats={['avif', 'webp', 'png']} alt="Judo Central Coast Logo" />
-        <h1 class="text-4xl">Coming Soon</h1>
-        <p>For information please contact Shane Alvisio on 0410 044 205 or Paul Sheean on 0422 058 087</p>
+        <h1 class="text-4xl text-primary">Coming Soon</h1>
+        <p class="text-secondary">For information please contact Shane Alvisio on 0410 044 205 or Paul Sheean on 0422 058 087</p>
 	</body>
 </html>
