added club logos

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
+import {ViewTransitions} from 'astro:transitions'
 import { Picture } from 'astro:assets'
 import jccLogo from '../assets/images/jcc-logo.png'
+import kugatsuLogo from '../assets/images/kugatsu.png'
+import jitakyoeiLogo from '../assets/images/jitakyoei.png'
 ---
 
 <html lang="en" class="h-full">
@@ -10,10 +13,15 @@ import jccLogo from '../assets/images/jcc-logo.png'
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Judo Central Coast</title>
+    <ViewTransitions fallback="swap"/>
 	</head>
-	<body class="bg-black text-white flex flex-col gap-4 justify-center items-center h-full">
-        <Picture class="mx-auto mb-8" src={jccLogo} formats={['avif', 'webp', 'png']} alt="Judo Central Coast Logo" />
-        <h1 class="text-5xl text-primary">Coming Soon</h1>
-        <p class="text-secondary text-xl text-center">For information please contact Shane Alvisio on 0410 044 205<br />or Paul Sheean on 0422 058 087</p>
+	<body class="bg-black text-white flex flex-col gap-4 justify-center items-center h-full mx-4">
+    <Picture src={jccLogo} formats={['avif', 'webp', 'png']} alt="Judo Central Coast Logo" />
+    <div class="flex flex-row gap-12 my-4">
+    	<Picture src={kugatsuLogo} formats={['avif', 'webp', 'png']} width="256" alt="Judo Central Coast Logo" />
+    	<Picture src={jitakyoeiLogo} formats={['avif', 'webp', 'png']} width="256" alt="Judo Central Coast Logo" />
+    </div>
+    <h1 class="text-5xl text-primary text-center">Coming Soon</h1>
+    <p class="text-secondary text-xl text-center">For information please contact Shane Alvisio on 0410 044 205<br />or Paul Sheean on 0422 058 087</p>
 	</body>
 </html>
