--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -23,8 +23,10 @@ import ToggleTheme from './ToggleTheme.astro'
 
         <nav>
             <ul>
-                <li><a href="/test">Test Pages</a></li>
-                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/">Timetable</a></li>
+                <li><a href="/">Locations</a></li>
+                <li><a href="/">Resources</a></li>
+                <li><a href="/">Contact Us</a></li>
                 <li><ToggleTheme /></li>
             </ul>
         </nav>
