--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,10 +21,10 @@ const { title } = Astro.props
 		<title>Judo Central Coast{title && `- ${title}`}</title>
     <ViewTransitions fallback="swap"/>
 	</head>
-	<body class="bg-bg-light dark:bg-bg-dark text-black dark:text-white flex flex-col min-h-screen">
+	<body class="bg-bg-light dark:bg-bg-dark text-black dark:text-white flex flex-col">
 		<slot name="leader" />
 		<HeaderMenu />
-		<main class="flex-grow flex flex-col gap-4 justify-center items-center h-full px-4 bg-bg-light dark:bg-bg-dark">
+		<main class="flex-grow flex flex-col gap-4 justify-center items-center h-full px-4 bg-bg-light dark:bg-bg-dark min-h-screen">
 			<slot />
 		</main>
 		<Footer />
