--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -80,7 +80,7 @@ import ToggleTheme from './ToggleTheme.astro'
 
 <style>
     header-menu {
-        @apply flex sticky top-0 z-30 justify-center sm:justify-start items-center p-4 h-28 transition-all duration-1000;
+        @apply flex sticky top-0 z-30 justify-center md:justify-start items-center p-4 h-28 transition-all duration-1000;
 
         .logo {
             @apply opacity-0 z-40 transition-opacity duration-[2000ms] delay-1000 w-0;
@@ -98,7 +98,7 @@ import ToggleTheme from './ToggleTheme.astro'
             @apply hidden;
 
             & ~ label {
-                @apply flex sm:hidden absolute top-0 left-0 p-4 h-28 w-12 text-4xl flex-col justify-center items-center text-center z-50;
+                @apply flex md:hidden absolute top-0 left-0 p-4 h-28 w-12 text-4xl flex-col justify-center items-center text-center z-50;
                 & .close {
                     @apply hidden;
                 }
@@ -115,22 +115,22 @@ import ToggleTheme from './ToggleTheme.astro'
                 }
 
                 & ~ nav {
-                    @apply max-sm:block;
+                    @apply max-md:block;
                 }
             }
         }
 
         & nav {
-            @apply hidden sm:flex sm:absolute sm:right-0 sm:top-0
-            sm:h-full sm:flex-col sm:justify-end
-            text-2xl sm:py-2 sm:px-4
+            @apply hidden md:flex md:absolute md:right-0 md:top-0
+            md:h-full md:flex-col md:justify-end
+            text-2xl md:py-2 md:px-4
 
-            max-sm:bg-black max-sm:h-[calc(100vh-7rem)] max-sm:w-screen
-            max-sm:absolute max-sm:left-0 max-sm:top-28
+            max-md:bg-bg-light max-md:dark:bg-bg-dark max-md:h-[calc(100vh-7rem)] max-md:w-screen
+            max-md:absolute max-md:left-0 max-md:top-28
             ;
 
             & ul {
-                @apply flex flex-col sm:flex-row gap-8 sm:gap-4 max-sm:p-8;
+                @apply flex flex-col md:flex-row gap-8 md:gap-4 max-md:p-8;
             }
         }
     }
