added no-scroll css to body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,3 +39,9 @@ const { title } = Astro.props
     	document.documentElement.classList.add('dark')
     }
 </script>
+
+<style>
+	body.no-scroll {
+      overflow: hidden;
+  }
+</style>
