--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props
 	<body class="bg-bg-light dark:bg-bg-dark text-black dark:text-white flex flex-col">
 		<slot name="leader" />
 		<HeaderMenu />
-		<main class="flex-grow flex flex-col gap-4 justify-center items-center h-full px-4 bg-bg-light dark:bg-bg-dark min-h-screen">
+		<main class="flex-grow flex flex-col gap-4 mt-12 items-center h-full px-4 bg-bg-light dark:bg-bg-dark min-h-screen">
 			<slot />
 		</main>
 		<Footer />
