more work on contact and timetable pages

--- a/src/components/contact/error.astro
+++ b/src/components/contact/error.astro
@@ -3,8 +3,7 @@ const contactPhone = import.meta.env.CONTACT_PHONE
 const contactEmail = import.meta.env.CONTACT_EMAIL
 ---
 
-<div class="flex-grow flex flex-col justify-center items-center">
-    <h1>Sorry, An Error Has Occurred</h1>
+<div class="flex flex-col justify-center items-center">
     <p>Sorry, we were unable to process your enquiry. Please try again later.</p>
     <p>Alternatively, please call us on <a href=`tel:${contactPhone}`>{contactPhone}</a> or email us at <a href=`mailto:${contactEmail}`>{contactEmail}</a>.
 </div>
