--- a/src/components/contact/thank-you.astro
+++ b/src/components/contact/thank-you.astro
@@ -3,8 +3,7 @@ const contactPhone = import.meta.env.CONTACT_PHONE
 const contactEmail = import.meta.env.CONTACT_EMAIL
 ---
 
-<div class="flex-grow flex flex-col justify-center items-center">
-    <h1>Thank you!</h1>
+<div class="flex flex-col justify-center items-center">
     <p>Thank you for contacting us. One of our representatives will get back to you as soon as possible.</p>
     <p>Alternatively, please call us on <a href=`tel:${contactPhone}`>{contactPhone}</a> or email us at <a href=`mailto:${contactEmail}`>{contactEmail}</a>.
 </div>
