--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -113,18 +113,22 @@
 
     }
 ---
-<Page title="Contact Us">
 {submitError ? 
+<Page title="Sorry, A Problem Has Occurred">
     <Error />
+</Page>
 :
     submitted ?
-        <ThankYou />
+        <Page title="Thank You For Contacting Us">
+            <ThankYou />
+        </Page>
     :
-        <div class="w-full max-w-screen-xl flex flex-col md:grid md:grid-cols-2 gap-12 md:gap-4">
-            <ContactDetails />
-            <ContactForm data={data} errors={errors} />
-        </div>
+        <Page title="Contact Us">
+            <div class="w-full max-w-screen-xl flex flex-col md:grid md:grid-cols-2 gap-12 md:gap-4">
+                <ContactDetails />
+                <ContactForm data={data} errors={errors} />
+            </div>
+        </Page>
     
 }
-</Page>
 
