--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -80,15 +80,13 @@ import ToggleTheme from './ToggleTheme.astro'
 
 <style>
     header-menu {
-        @apply flex sticky top-0 z-30 justify-center md:justify-start items-center p-4 h-28 transition-all duration-1000;
+        @apply bg-bg-light dark:bg-bg-dark flex sticky top-0 z-30 justify-center md:justify-start items-center p-4 h-28;
 
         .logo {
             @apply opacity-0 z-40 transition-opacity duration-[2000ms] delay-1000 w-0;
         }
 
         &.at-top {
-            @apply bg-bg-light dark:bg-bg-dark bg-opacity-90;
-
             .logo {
                 @apply opacity-100 w-auto;
             }
