--- a/src/components/contact/details.astro
+++ b/src/components/contact/details.astro
@@ -7,8 +7,7 @@ const contactPhone = import.meta.env.CONTACT_PHONE
 const contactEmail = import.meta.env.CONTACT_EMAIL
 ---
 
-<div class="flex-grow flex flex-col justify-center items-center">
-    <h1>Contact Us</h1>
+<div class="flex flex-col">
     <div class="flex flex-col gap-4 justify-start">
         <a href=`tel:${contactPhone}` class="fill-white flex flex-row gap-4 items-center">
             <div class="h-8 w-8"><Fragment set:html={phoneIcon} /></div>
@@ -19,14 +18,6 @@ const contactEmail = import.meta.env.CONTACT_EMAIL
             <div>
                 <p>ADDRESS</p>
                 <p>GOES</p>
-                <p>HERE</p>
-            </div>
-        </div>
-        <div class="fill-white flex flex-row gap-4 items-center">
-            <div class="h-8 w-8"><Fragment set:html={clockIcon} /></div>
-            <div>
-                <p>HOURS</p>
-                <p>GO</p>
                 <p>HERE</p>
             </div>
         </div>
