--- a/src/components/contact/form.astro
+++ b/src/components/contact/form.astro
@@ -70,7 +70,7 @@ form {
 }
 
 #page-spinner {
-    @apply flex top-0 left-0 absolute w-full h-full justify-center items-center
+    @apply flex top-0 left-0 fixed w-screen h-screen justify-center items-center
         bg-black bg-opacity-75 -z-50 opacity-0 transition-opacity duration-1000 delay-500;
 }
 </style>
