tweak timetable css

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -195,7 +195,7 @@ import Page from '../layouts/Page.astro'
                 }
 
                 .session {
-                    @apply flex-grow text-center p-2 flex flex-col gap-2;
+                    @apply flex-1 text-center p-2 flex flex-col gap-2;
 
                     .location {
                         @apply font-bold text-xl;
