tweak timetable and pricing colours

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -207,31 +207,31 @@ import Page from '../layouts/Page.astro'
 }
 
 .mini {
-    @apply bg-sky-400 dark:bg-sky-900;
+    @apply bg-sky-500 dark:bg-sky-900;
 }
 
 .kids {
-    @apply bg-emerald-400 dark:bg-emerald-900;
+    @apply bg-emerald-500 dark:bg-emerald-900;
 }
 
 .mixed-kids {
-    @apply bg-gradient-to-r from-sky-400 to-emerald-400 dark:from-sky-900 dark:to-emerald-900;
+    @apply bg-gradient-to-r from-sky-500 to-emerald-500 dark:from-sky-900 dark:to-emerald-900;
 }
 
 .teen-boys {
-    @apply bg-amber-400 dark:bg-amber-900;
+    @apply bg-amber-500 dark:bg-amber-900;
 }
 
 .teen-girls {
-    @apply bg-pink-400 dark:bg-pink-900;
+    @apply bg-pink-500 dark:bg-pink-900;
 }
 
 .adults {
-    @apply bg-red-400 dark:bg-red-900;
+    @apply bg-rose-500 dark:bg-rose-900;
 }
 
 .open-mat {
-    @apply bg-purple-400 dark:bg-purple-900;
+    @apply bg-purple-500 dark:bg-purple-900;
 }
 
 </style>
