fixed timetable incorrect time

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -162,7 +162,7 @@ import Page from '../layouts/Page.astro'
             <h1>Sunday</h1>
             <ul>
                 <li>
-                    <div class="time">6:30pm - 8:00pm</div>
+                    <div class="time">11:00am - 12:30pm</div>
                     <div class="session niagara-park open-mat">
                         <div>Judo and Jiu Jitsu Open Mat</div>
                         <div class="location">Erina</div>
