tweak timetable layout

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -188,7 +188,7 @@ import Page from '../layouts/Page.astro'
             @apply sm:ml-8 flex flex-col gap-6 sm:gap-2;
 
             li {
-                @apply flex flex-col sm:flex-row gap-2 w-full;
+                @apply flex flex-col sm:flex-row sm:items-center gap-2 w-full;
 
                 .time {
                     @apply font-bold sm:flex-none sm:w-36;
