add locations page

--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -24,7 +24,7 @@ import ToggleTheme from './ToggleTheme.astro'
         <nav>
             <ul>
                 <li><a href="/timetable">Timetable</a></li>
-                <li><a href="/">Locations</a></li>
+                <li><a href="/locations">Locations</a></li>
                 <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/">Resources</a></li>
                 <li><a href="/contact">Contact Us</a></li>
