updated class name

--- a/src/pages/timetable.astro
+++ b/src/pages/timetable.astro
@@ -43,7 +43,7 @@ import Page from '../layouts/Page.astro'
                 <li>
                     <div class="time">7:30pm - 9:00pm</div>
                     <div class="session erina adults">
-                        <div>Tuesday Titans Judo Open Training</div>
+                        <div>Tuesday Titans Judo Comp Training</div>
                         <div class="location">Erina</div>
                     </div>
                 </li>
